# celai

./: .bumpversion.cfg  .clear_envs.sh  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  bump_version.sh  cache_embeddings.py  chroma_test.py  index.html  mkdocs.yml  project.toml  pyproject.toml  release-please-config.json  requirements.txt  scketch.py  sitemap.xml
.github/workflows/: dev_tests.yml  docs-deploy.yml  python-package.yml  release-please.yml  release.yml  tests.yml
cel/: cache.py  config.py
cel/assistants/: base_assistant.py  common.py  context.py  function_context.py  function_response.py  request_context.py  state_manager.py  stream_content_chunk.py
cel/comms/: client_command.py  sentense_detection.py  utils.py
cel/decoders/: gcp_geocoding.py
cel/gateway/: __init__.py  http_callbacks.py  message_gateway.py  request_context.py  utils.py
cel/message_enhancers/: default_message_enhancer.py  smart_message_enhancer_openai.py
cel/middlewares/: __init__.py  contact_decoding.py  deepgram_stt.py  geodecoding.py  in_mem_blacklist.py  invitation_guard.py  redis_blacklist.py  redis_blacklist_async.py  session_middleware.py
cel/model/: common.py
cel/prompt/: prompt_template.py
cel/rag_standard/: __init__.py  migration.py
cel/voice/: base_voice_provider.py  deepgram_adapter.py  elevenlabs_adapter.py
connectors/: index.html
docs/: getting_started.md  index.md
examples/: delete_pickle_experiment.py  simple_assistant.py  simple_assistant_cli_cmds.py
getting_started/: index.html
middlewares/: index.html
prompt/: index.html
search/: search_index.json
(+253 files in other folders)
