[tool.poetry]
name = "celai"
version = "0.3.10"
description = "AI Driven Communication Platform. Assistants made easy."
authors = ["Alex Martin <alejamp@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "cel" }
]

[tool.poetry.urls]
Homepage = "https://github.com/cel-ai/celai"
Issues = "https://github.com/cel-ai/celai/issues"

[tool.poetry.dependencies]
#Runtime
python = "^3.11"
# Dependencies for the project:
redis = ">=4.6.0"
numpy = "^1.26.4"
loguru = ">=0.7.2"
chardet = ">=5.2.0"
marko = "^2.1.0"
chromadb = ">=0.5.0"
python-dotenv = "^1.0.1"
openai = ">=1.30.1"
diskcache = ">=5.6.3"
openai-responses = ">=0.3.2"
halo = ">=0.0.31"
aioredis = ">=2.0.1"
fakeredis = ">=2.23.2"
pybars3 = ">=0.9.7"
beautifulsoup4 = ">=4.12.3"
lxml = ">=5.2.2"
shortuuid = ">=1.0.13"
dictdiffer = ">=0.9.0"
pysbd = ">=0.3.4"
deepgram-sdk = ">=3.2.7"
geopy = ">=2.4.1"
langchain = ">=0.2.0"
langchain-chroma = ">=0.1.1"                        
langchain-community = ">=0.2.1"
langchain-openai = ">=0.1.8"
aiogram = ">=3.6.0"
ollama = ">=0.3.1"
qrcode = ">=7.4.2"
pymongo = ">=4.8.0"
together = ">=1.2.12"
elevenlabs = ">=1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]